Corrected background overflow

--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,15 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #aeaeae;
+  background-color: rgb(103, 103, 103);
   border-radius: 5px;
 }
-body {
+#root {
   height: 100vh;
+  overflow: hidden;
+}
+body {
+  height: 100%;
   background: url("/bg.svg");
   background-repeat: no-repeat;
   background-size: cover;
